<resources>
    <string name="app_name">Chatra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="weddings">Weddings</string>
    <string name="naming_ceremony">Naming Ceremony</string>
    <string name="birthdays">Birthdays</string>
    <string name="parties">Parties</string>
    <string name="corporate_events">Corporate Events</string>
    <string name="engagements">Engagements</string>

    <string name="cost_per_plate">500 per plate</string>
    <string name="alert_gps_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="reserve">Reserve</string>
    <string name="check_availability">Check Availability</string>

    <string name="venue_halls">Venue Halls</string>
    <string name="easy_to_find">Easy To Find</string>
    <string name="book_venue">Book now, pay at venue</string>
    <string name="low_prices">Surprisingly low prices</string>
    <string name="menu_and_pack">Menu &amp; Packages</string>
    <string name="menu_and_pack_details">Below listed prices are excluding all taxes. Tax on Food &amp; Beverages (F&amp;B) is 14.5 % Menu prices will be varies depending on guest requirment and number of people.</string>

    <string name="sel_time_slot">Select Slot</string>
    <string name="sel_date">Select Date</string>

    <string name="search_place">Search place</string>
    <string name="bkh_hall">BKH Hall</string>

    <string name="reserved">\t: Reserved</string>
    <string name="review_bookings">Review Booking</string>

    <item type="id" name="CLICK"/>

</resources>
