<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <include
                    android:id="@+id/toolbar_header_view"
                    layout="@layout/toolbar_header_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/header_view_end_margin_right"
                    android:visibility="gone" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Highlights"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/food_black"
                                android:text="Food" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/drinks_black"
                                android:text="Drinks Allowed" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/ac_black"
                                android:text="AC centralised" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/crowd_black"
                                android:text="80 to 500" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/car_black"
                                android:text="upto 50" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/valet_black"
                                android:text="Valet Parking" />

                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_and_pack"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_and_pack_details" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Seating Arrangements"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/theatre_arrangment"
                                android:text="Theater" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/class_arrangment"
                                android:text="Class" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/round_arrangment"
                                android:text="Cluster" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/u_arrangment"
                                android:text="U shape" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/conference_arrangment"
                                android:text="Conference" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Other Facilities"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/generator_black"
                                android:text="Generator" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/projector_black"
                                android:text="Projector" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/microphone_black"
                                android:text="Microphone" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/sound_system_black"
                                android:text="Sound System" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/elevator_black"
                                android:text="Elevator" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/pool_black"
                                android:text="Pool" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/wheelchair_black"
                                android:text="Wheelchair" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/decoration_black"
                                android:text="Outer Decoration" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/homa_black"
                                android:text="Homa" />

                            <TextView
                                style="@style/textcontent_for_image"
                                android:drawableTop="@drawable/leaf_black"
                                android:text="Plantain leafs" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin">

                <include
                    layout="@layout/load_more_cell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </HorizontalScrollView>

            <Button
                android:id="@+id/CHECK_AVAILABILITY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/reserve_now"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include
        android:id="@+id/float_header_view"
        layout="@layout/toolbar_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.pissay.chatra.CustomViewBehavior" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/call"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>